// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`C09 I34 — the contained failure, in a frame > dark-ascii capped at 30 1`] = `
"frame 1 — committed
[38;2;240;90;90m! plot failed to render: Type~[39m

frame 2 — asked 7
+----------------------------+
| [38;2;240;90;90m---------[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m----------[39m |
| [38;2;240;90;90m! plot failed to render:  [39m |
| [38;2;240;90;90mTypeError: series.map is  [39m |
| [38;2;240;90;90mnot a function            [39m |
| [38;2;240;90;90m    at plotDefinition.ren~[39m |
+----------------------------+"
`;

exports[`C09 I34 — the contained failure, in a frame > dark-ascii capped at 40 1`] = `
"frame 1 — committed
[38;2;240;90;90m! plot failed to render: TypeError: ser~[39m

frame 2 — asked 7
+--------------------------------------+
| [38;2;240;90;90m--------------[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m---------------[39m |
| [38;2;240;90;90m! plot failed to render: TypeError: [39m |
| [38;2;240;90;90mseries.map is not a function        [39m |
| [38;2;240;90;90m    at plotDefinition.render        [39m |
| [38;2;240;90;90m(plot/definition.ts:1204:18)     at~[39m |
+--------------------------------------+"
`;

exports[`C09 I34 — the contained failure, in a frame > dark-ascii capped at 80 1`] = `
"frame 1 — committed
[38;2;240;90;90m! plot failed to render: TypeError: series.map is not a function     at plotDef~[39m

frame 2 — asked 7
+------------------------------------------------------------------------------+
| [38;2;240;90;90m----------------------------------[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m-----------------------------------[39m |
| [38;2;240;90;90m! plot failed to render: TypeError: series.map is not a function            [39m |
| [38;2;240;90;90m    at plotDefinition.render (plot/definition.ts:1204:18)                   [39m |
| [38;2;240;90;90m    at BlockRegistry.render (blocks/registry.ts:495:47)                     [39m |
| [38;2;240;90;90m    at renderSequence (render-lines.ts:88:20)     at visibleRows (shell/ses~[39m |
+------------------------------------------------------------------------------+"
`;

exports[`C09 I34 — the contained failure, in a frame > dark-ascii short at 30 1`] = `
"frame 1 — committed
[38;2;240;90;90m! plot failed to render: ENOE~[39m

frame 2 — asked 5
+----------------------------+
|[38;2;240;90;90m----------[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m-----------[39m|
|[38;2;240;90;90m! plot failed to render:    [39m|
|[38;2;240;90;90mENOENT                      [39m|
+----------------------------+"
`;

exports[`C09 I34 — the contained failure, in a frame > dark-ascii short at 40 1`] = `
"frame 1 — committed
[38;2;240;90;90m! plot failed to render: ENOENT[39m

frame 2 — asked 4
+--------------------------------------+
|[38;2;240;90;90m---------------[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m----------------[39m|
|[38;2;240;90;90m! plot failed to render: ENOENT       [39m|
+--------------------------------------+"
`;

exports[`C09 I34 — the contained failure, in a frame > dark-ascii short at 80 1`] = `
"frame 1 — committed
[38;2;240;90;90m! plot failed to render: ENOENT[39m

frame 2 — asked 4
+------------------------------------------------------------------------------+
|[38;2;240;90;90m-----------------------------------[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m------------------------------------[39m|
|[38;2;240;90;90m! plot failed to render: ENOENT                                               [39m|
+------------------------------------------------------------------------------+"
`;

exports[`C09 I34 — the contained failure, in a frame > dark-ascii wrapping at 30 1`] = `
"frame 1 — committed
[38;2;240;90;90m! plot failed to render: Cann~[39m

frame 2 — asked 7
+----------------------------+
| [38;2;240;90;90m---------[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m----------[39m |
| [38;2;240;90;90m! plot failed to render:  [39m |
| [38;2;240;90;90mCannot read properties of [39m |
| [38;2;240;90;90mundefined (reading        [39m |
| [38;2;240;90;90m'series')                 [39m |
+----------------------------+"
`;

exports[`C09 I34 — the contained failure, in a frame > dark-ascii wrapping at 40 1`] = `
"frame 1 — committed
[38;2;240;90;90m! plot failed to render: Cannot read pr~[39m

frame 2 — asked 6
+--------------------------------------+
| [38;2;240;90;90m--------------[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m---------------[39m |
| [38;2;240;90;90m! plot failed to render: Cannot read[39m |
| [38;2;240;90;90mproperties of undefined (reading    [39m |
| [38;2;240;90;90m'series')                           [39m |
+--------------------------------------+"
`;

exports[`C09 I34 — the contained failure, in a frame > dark-ascii wrapping at 80 1`] = `
"frame 1 — committed
[38;2;240;90;90m! plot failed to render: Cannot read properties of undefined (reading 'series')[39m

frame 2 — asked 5
+------------------------------------------------------------------------------+
|[38;2;240;90;90m-----------------------------------[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m------------------------------------[39m|
|[38;2;240;90;90m! plot failed to render: Cannot read properties of undefined (reading         [39m|
|[38;2;240;90;90m'series')                                                                     [39m|
+------------------------------------------------------------------------------+"
`;

exports[`C09 I34 — the contained failure, in a frame > dark-unicode capped at 30 1`] = `
"frame 1 — committed
[38;2;240;90;90m▲ plot failed to render: Type…[39m

frame 2 — asked 7
┌────────────────────────────┐
│ [38;2;240;90;90m─────────[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m──────────[39m │
│ [38;2;240;90;90m▲ plot failed to render:  [39m │
│ [38;2;240;90;90mTypeError: series.map is  [39m │
│ [38;2;240;90;90mnot a function            [39m │
│ [38;2;240;90;90m    at plotDefinition.ren…[39m │
└────────────────────────────┘"
`;

exports[`C09 I34 — the contained failure, in a frame > dark-unicode capped at 40 1`] = `
"frame 1 — committed
[38;2;240;90;90m▲ plot failed to render: TypeError: ser…[39m

frame 2 — asked 7
┌──────────────────────────────────────┐
│ [38;2;240;90;90m──────────────[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m───────────────[39m │
│ [38;2;240;90;90m▲ plot failed to render: TypeError: [39m │
│ [38;2;240;90;90mseries.map is not a function        [39m │
│ [38;2;240;90;90m    at plotDefinition.render        [39m │
│ [38;2;240;90;90m(plot/definition.ts:1204:18)     at…[39m │
└──────────────────────────────────────┘"
`;

exports[`C09 I34 — the contained failure, in a frame > dark-unicode capped at 80 1`] = `
"frame 1 — committed
[38;2;240;90;90m▲ plot failed to render: TypeError: series.map is not a function     at plotDef…[39m

frame 2 — asked 7
┌──────────────────────────────────────────────────────────────────────────────┐
│ [38;2;240;90;90m──────────────────────────────────[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m───────────────────────────────────[39m │
│ [38;2;240;90;90m▲ plot failed to render: TypeError: series.map is not a function            [39m │
│ [38;2;240;90;90m    at plotDefinition.render (plot/definition.ts:1204:18)                   [39m │
│ [38;2;240;90;90m    at BlockRegistry.render (blocks/registry.ts:495:47)                     [39m │
│ [38;2;240;90;90m    at renderSequence (render-lines.ts:88:20)     at visibleRows (shell/ses…[39m │
└──────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`C09 I34 — the contained failure, in a frame > dark-unicode short at 30 1`] = `
"frame 1 — committed
[38;2;240;90;90m▲ plot failed to render: ENOE…[39m

frame 2 — asked 5
┌────────────────────────────┐
│[38;2;240;90;90m──────────[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m───────────[39m│
│[38;2;240;90;90m▲ plot failed to render:    [39m│
│[38;2;240;90;90mENOENT                      [39m│
└────────────────────────────┘"
`;

exports[`C09 I34 — the contained failure, in a frame > dark-unicode short at 40 1`] = `
"frame 1 — committed
[38;2;240;90;90m▲ plot failed to render: ENOENT[39m

frame 2 — asked 4
┌──────────────────────────────────────┐
│[38;2;240;90;90m───────────────[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m────────────────[39m│
│[38;2;240;90;90m▲ plot failed to render: ENOENT       [39m│
└──────────────────────────────────────┘"
`;

exports[`C09 I34 — the contained failure, in a frame > dark-unicode short at 80 1`] = `
"frame 1 — committed
[38;2;240;90;90m▲ plot failed to render: ENOENT[39m

frame 2 — asked 4
┌──────────────────────────────────────────────────────────────────────────────┐
│[38;2;240;90;90m───────────────────────────────────[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m────────────────────────────────────[39m│
│[38;2;240;90;90m▲ plot failed to render: ENOENT                                               [39m│
└──────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`C09 I34 — the contained failure, in a frame > dark-unicode wrapping at 30 1`] = `
"frame 1 — committed
[38;2;240;90;90m▲ plot failed to render: Cann…[39m

frame 2 — asked 7
┌────────────────────────────┐
│ [38;2;240;90;90m─────────[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m──────────[39m │
│ [38;2;240;90;90m▲ plot failed to render:  [39m │
│ [38;2;240;90;90mCannot read properties of [39m │
│ [38;2;240;90;90mundefined (reading        [39m │
│ [38;2;240;90;90m'series')                 [39m │
└────────────────────────────┘"
`;

exports[`C09 I34 — the contained failure, in a frame > dark-unicode wrapping at 40 1`] = `
"frame 1 — committed
[38;2;240;90;90m▲ plot failed to render: Cannot read pr…[39m

frame 2 — asked 6
┌──────────────────────────────────────┐
│ [38;2;240;90;90m──────────────[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m───────────────[39m │
│ [38;2;240;90;90m▲ plot failed to render: Cannot read[39m │
│ [38;2;240;90;90mproperties of undefined (reading    [39m │
│ [38;2;240;90;90m'series')                           [39m │
└──────────────────────────────────────┘"
`;

exports[`C09 I34 — the contained failure, in a frame > dark-unicode wrapping at 80 1`] = `
"frame 1 — committed
[38;2;240;90;90m▲ plot failed to render: Cannot read properties of undefined (reading 'series')[39m

frame 2 — asked 5
┌──────────────────────────────────────────────────────────────────────────────┐
│[38;2;240;90;90m───────────────────────────────────[38;2;255;255;255m[48;2;198;40;40m ERROR [49m[38;2;240;90;90m────────────────────────────────────[39m│
│[38;2;240;90;90m▲ plot failed to render: Cannot read properties of undefined (reading         [39m│
│[38;2;240;90;90m'series')                                                                     [39m│
└──────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`C09 I34 — the contained failure, in a frame > light-unicode capped at 30 1`] = `
"frame 1 — committed
[38;2;194;31;16m▲ plot failed to render: Type…[39m

frame 2 — asked 7
┌────────────────────────────┐
│ [38;2;194;31;16m─────────[38;2;255;255;255m[48;2;168;31;18m ERROR [49m[38;2;194;31;16m──────────[39m │
│ [38;2;194;31;16m▲ plot failed to render:  [39m │
│ [38;2;194;31;16mTypeError: series.map is  [39m │
│ [38;2;194;31;16mnot a function            [39m │
│ [38;2;194;31;16m    at plotDefinition.ren…[39m │
└────────────────────────────┘"
`;

exports[`C09 I34 — the contained failure, in a frame > light-unicode capped at 40 1`] = `
"frame 1 — committed
[38;2;194;31;16m▲ plot failed to render: TypeError: ser…[39m

frame 2 — asked 7
┌──────────────────────────────────────┐
│ [38;2;194;31;16m──────────────[38;2;255;255;255m[48;2;168;31;18m ERROR [49m[38;2;194;31;16m───────────────[39m │
│ [38;2;194;31;16m▲ plot failed to render: TypeError: [39m │
│ [38;2;194;31;16mseries.map is not a function        [39m │
│ [38;2;194;31;16m    at plotDefinition.render        [39m │
│ [38;2;194;31;16m(plot/definition.ts:1204:18)     at…[39m │
└──────────────────────────────────────┘"
`;

exports[`C09 I34 — the contained failure, in a frame > light-unicode capped at 80 1`] = `
"frame 1 — committed
[38;2;194;31;16m▲ plot failed to render: TypeError: series.map is not a function     at plotDef…[39m

frame 2 — asked 7
┌──────────────────────────────────────────────────────────────────────────────┐
│ [38;2;194;31;16m──────────────────────────────────[38;2;255;255;255m[48;2;168;31;18m ERROR [49m[38;2;194;31;16m───────────────────────────────────[39m │
│ [38;2;194;31;16m▲ plot failed to render: TypeError: series.map is not a function            [39m │
│ [38;2;194;31;16m    at plotDefinition.render (plot/definition.ts:1204:18)                   [39m │
│ [38;2;194;31;16m    at BlockRegistry.render (blocks/registry.ts:495:47)                     [39m │
│ [38;2;194;31;16m    at renderSequence (render-lines.ts:88:20)     at visibleRows (shell/ses…[39m │
└──────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`C09 I34 — the contained failure, in a frame > light-unicode short at 30 1`] = `
"frame 1 — committed
[38;2;194;31;16m▲ plot failed to render: ENOE…[39m

frame 2 — asked 5
┌────────────────────────────┐
│[38;2;194;31;16m──────────[38;2;255;255;255m[48;2;168;31;18m ERROR [49m[38;2;194;31;16m───────────[39m│
│[38;2;194;31;16m▲ plot failed to render:    [39m│
│[38;2;194;31;16mENOENT                      [39m│
└────────────────────────────┘"
`;

exports[`C09 I34 — the contained failure, in a frame > light-unicode short at 40 1`] = `
"frame 1 — committed
[38;2;194;31;16m▲ plot failed to render: ENOENT[39m

frame 2 — asked 4
┌──────────────────────────────────────┐
│[38;2;194;31;16m───────────────[38;2;255;255;255m[48;2;168;31;18m ERROR [49m[38;2;194;31;16m────────────────[39m│
│[38;2;194;31;16m▲ plot failed to render: ENOENT       [39m│
└──────────────────────────────────────┘"
`;

exports[`C09 I34 — the contained failure, in a frame > light-unicode short at 80 1`] = `
"frame 1 — committed
[38;2;194;31;16m▲ plot failed to render: ENOENT[39m

frame 2 — asked 4
┌──────────────────────────────────────────────────────────────────────────────┐
│[38;2;194;31;16m───────────────────────────────────[38;2;255;255;255m[48;2;168;31;18m ERROR [49m[38;2;194;31;16m────────────────────────────────────[39m│
│[38;2;194;31;16m▲ plot failed to render: ENOENT                                               [39m│
└──────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`C09 I34 — the contained failure, in a frame > light-unicode wrapping at 30 1`] = `
"frame 1 — committed
[38;2;194;31;16m▲ plot failed to render: Cann…[39m

frame 2 — asked 7
┌────────────────────────────┐
│ [38;2;194;31;16m─────────[38;2;255;255;255m[48;2;168;31;18m ERROR [49m[38;2;194;31;16m──────────[39m │
│ [38;2;194;31;16m▲ plot failed to render:  [39m │
│ [38;2;194;31;16mCannot read properties of [39m │
│ [38;2;194;31;16mundefined (reading        [39m │
│ [38;2;194;31;16m'series')                 [39m │
└────────────────────────────┘"
`;

exports[`C09 I34 — the contained failure, in a frame > light-unicode wrapping at 40 1`] = `
"frame 1 — committed
[38;2;194;31;16m▲ plot failed to render: Cannot read pr…[39m

frame 2 — asked 6
┌──────────────────────────────────────┐
│ [38;2;194;31;16m──────────────[38;2;255;255;255m[48;2;168;31;18m ERROR [49m[38;2;194;31;16m───────────────[39m │
│ [38;2;194;31;16m▲ plot failed to render: Cannot read[39m │
│ [38;2;194;31;16mproperties of undefined (reading    [39m │
│ [38;2;194;31;16m'series')                           [39m │
└──────────────────────────────────────┘"
`;

exports[`C09 I34 — the contained failure, in a frame > light-unicode wrapping at 80 1`] = `
"frame 1 — committed
[38;2;194;31;16m▲ plot failed to render: Cannot read properties of undefined (reading 'series')[39m

frame 2 — asked 5
┌──────────────────────────────────────────────────────────────────────────────┐
│[38;2;194;31;16m───────────────────────────────────[38;2;255;255;255m[48;2;168;31;18m ERROR [49m[38;2;194;31;16m────────────────────────────────────[39m│
│[38;2;194;31;16m▲ plot failed to render: Cannot read properties of undefined (reading         [39m│
│[38;2;194;31;16m'series')                                                                     [39m│
└──────────────────────────────────────────────────────────────────────────────┘"
`;
